Added javascript active links effects to navbar while scrolling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">
+                            <a href="#home" class="nav__link active-link">
                                 <i class="ri-home-line"></i>
                                 <span>Home</span>
                             </a>
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#product" class="nav__link">
+                            <a href="#products" class="nav__link">
                                 <i class="ri-t-shirt-line"></i>
                                 <span>Product</span>
                             </a>
