--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <!-- Theme change button -->
-                <i class="ri-moon-line"></i>
+                <i class="ri-moon-line change-theme" id="theme-button"></i>
             </nav>
         </header>
 
@@ -328,7 +328,9 @@
         </footer>
 
         <!--========== SCROLL UP ==========-->
-
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+        </a>
         
         <!--=============== SCROLLREVEAL ===============-->
         <script src="assets/js/scrollreveal.min.js"></script>
