--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
             <div class="footer__info container">
                 <span class="footer__copy">
-                    &#169; Bedimcode. All Rights Reserved
+                    &#169; All Rights Reserved
                 </span>
 
                 <a href="#" class="footer__privacy">
